# oec-2025

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/: .gitignore  Dockerfile  README.md  app.py  disaster_radius.conf  inject_live_data.py  pyproject.toml  requirements.txt
backend/api/: __init__.py  reports.py  users.py
backend/database/: examples.py  models.py
backend/functions/: alertUser.py  alerts.py
backend/src/api/: app.py
backend/src/api/database/: examples.py  models.py
backend/src/api/functions/: alertUser.py  alerts.py
backend/src/api/routes/: __init__.py  reports.py  users.py
backend/src/api/updates/: reports.py
backend/tests/: conftest.py  test_reporting.py  utils.py
frontend/: Dockerfile  README.md  index.html  jsconfig.json  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/ui/: googleAddress.tsx  nav-dock.tsx
frontend/src/pages/: Home.jsx  Map.jsx  ModifyReport.jsx  NoPage.jsx  NotifyMe.jsx  ReportForm.jsx
