[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "backend"
version = "0.0.1"
dependencies = [
    "flask",
    "gunicorn",
    "Flask-SQLAlchemy",
    "python-dotenv",
    "pydantic",
    "pytest",
    "twilio",
    "aiohttp",
    'importlib-metadata; python_version<"3.10"',
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["backend"]
